--- a/tutorials/03-emotion-analysis.ipynb
+++ b/tutorials/03-emotion-analysis.ipynb
@@ -39,10 +39,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-17T04:34:16.418947Z",
-     "iopub.status.busy": "2023-06-17T04:34:16.418360Z",
-     "iopub.status.idle": "2023-06-17T04:34:30.924308Z",
-     "shell.execute_reply": "2023-06-17T04:34:30.923127Z"
+     "iopub.execute_input": "2023-06-24T15:52:50.657916Z",
+     "iopub.status.busy": "2023-06-24T15:52:50.657377Z",
+     "iopub.status.idle": "2023-06-24T15:53:02.459490Z",
+     "shell.execute_reply": "2023-06-24T15:53:02.458144Z"
     }
    },
    "outputs": [
@@ -50,15 +50,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Note: you may need to restart the kernel to use updated packages.\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     },
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Could not find image processor class in the image processor config or the model config. Loading based on pattern matching with the model's feature extractor configuration.\n"
+      "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
@@ -79,13 +78,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-17T04:34:30.929427Z",
-     "iopub.status.busy": "2023-06-17T04:34:30.929069Z",
-     "iopub.status.idle": "2023-06-17T04:34:33.099298Z",
-     "shell.execute_reply": "2023-06-17T04:34:33.097532Z"
+     "iopub.execute_input": "2023-06-24T15:53:02.465549Z",
+     "iopub.status.busy": "2023-06-24T15:53:02.465108Z",
+     "iopub.status.idle": "2023-06-24T15:53:04.600763Z",
+     "shell.execute_reply": "2023-06-24T15:53:04.599014Z"
     }
    },
    "outputs": [
@@ -93,29 +92,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File 'defhappy.mp4' already there; not retrieving.\n",
-      "--2023-06-23 01:50:16--  https://raw.githubusercontent.com/georgia-tech-db/eva/master/evadb/udfs/emotion_detector.py\n",
-      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.110.133, 185.199.108.133, 185.199.111.133, ...\n",
-      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.110.133|:443... connected.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 6056 (5.9K) [text/plain]\n",
-      "Saving to: 'emotion_detector.py'\n",
-      "\n",
-      "emotion_detector.py 100%[===================>]   5.91K  --.-KB/s    in 0s      \n",
-      "\n",
-      "2023-06-23 01:50:16 (31.8 MB/s) - 'emotion_detector.py' saved [6056/6056]\n",
-      "\n",
-      "--2023-06-23 01:50:16--  https://raw.githubusercontent.com/georgia-tech-db/eva/master/evadb/udfs/face_detector.py\n",
-      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.109.133, 185.199.111.133, 185.199.108.133, ...\n",
-      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.109.133|:443... connected.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 2886 (2.8K) [text/plain]\n",
-      "Saving to: 'face_detector.py'\n",
-      "\n",
-      "face_detector.py    100%[===================>]   2.82K  --.-KB/s    in 0s      \n",
-      "\n",
-      "2023-06-23 01:50:17 (21.1 MB/s) - 'face_detector.py' saved [2886/2886]\n",
-      "\n"
+      "File ‘defhappy.mp4’ already there; not retrieving.\r\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File ‘emotion_detector.py’ already there; not retrieving.\r\n",
+      "\r\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File ‘face_detector.py’ already there; not retrieving.\r\n",
+      "\r\n"
      ]
     }
    ],
@@ -143,10 +136,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-17T04:34:33.104736Z",
-     "iopub.status.busy": "2023-06-17T04:34:33.104365Z",
-     "iopub.status.idle": "2023-06-17T04:34:33.322874Z",
-     "shell.execute_reply": "2023-06-17T04:34:33.322113Z"
+     "iopub.execute_input": "2023-06-24T15:53:04.607056Z",
+     "iopub.status.busy": "2023-06-24T15:53:04.606456Z",
+     "iopub.status.idle": "2023-06-24T15:53:04.825273Z",
+     "shell.execute_reply": "2023-06-24T15:53:04.824437Z"
     }
    },
    "outputs": [
@@ -217,13 +210,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-17T04:34:33.328551Z",
-     "iopub.status.busy": "2023-06-17T04:34:33.328325Z",
-     "iopub.status.idle": "2023-06-17T04:34:33.353353Z",
-     "shell.execute_reply": "2023-06-17T04:34:33.352112Z"
+     "iopub.execute_input": "2023-06-24T15:53:04.829891Z",
+     "iopub.status.busy": "2023-06-24T15:53:04.829633Z",
+     "iopub.status.idle": "2023-06-24T15:53:06.500826Z",
+     "shell.execute_reply": "2023-06-24T15:53:06.499967Z"
     }
    },
    "outputs": [
@@ -254,18 +247,18 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>UDF FaceDetector successfully added to the dat...</td>\n",
+       "      <td>UDF FaceDetector already exists, nothing added.</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                   0\n",
-       "0  UDF FaceDetector successfully added to the dat..."
+       "                                                 0\n",
+       "0  UDF FaceDetector already exists, nothing added."
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,20 +292,13 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-17T04:34:33.357981Z",
-     "iopub.status.busy": "2023-06-17T04:34:33.357511Z",
-     "iopub.status.idle": "2023-06-17T04:34:42.041175Z",
-     "shell.execute_reply": "2023-06-17T04:34:42.040239Z"
+     "iopub.execute_input": "2023-06-24T15:53:06.505902Z",
+     "iopub.status.busy": "2023-06-24T15:53:06.505640Z",
+     "iopub.status.idle": "2023-06-24T15:53:09.079253Z",
+     "shell.execute_reply": "2023-06-24T15:53:09.078555Z"
     }
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-06-17 00:34:35,684\tINFO worker.py:1625 -- Started a local Ray instance.\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -456,10 +442,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-17T04:34:42.045605Z",
-     "iopub.status.busy": "2023-06-17T04:34:42.045234Z",
-     "iopub.status.idle": "2023-06-17T04:34:51.886880Z",
-     "shell.execute_reply": "2023-06-17T04:34:51.885355Z"
+     "iopub.execute_input": "2023-06-24T15:53:09.084438Z",
+     "iopub.status.busy": "2023-06-24T15:53:09.084183Z",
+     "iopub.status.idle": "2023-06-24T15:53:10.827185Z",
+     "shell.execute_reply": "2023-06-24T15:53:10.826225Z"
     }
    },
    "outputs": [],
@@ -477,10 +463,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-17T04:34:51.892248Z",
-     "iopub.status.busy": "2023-06-17T04:34:51.891769Z",
-     "iopub.status.idle": "2023-06-17T04:34:51.904743Z",
-     "shell.execute_reply": "2023-06-17T04:34:51.904057Z"
+     "iopub.execute_input": "2023-06-24T15:53:10.832704Z",
+     "iopub.status.busy": "2023-06-24T15:53:10.832380Z",
+     "iopub.status.idle": "2023-06-24T15:53:10.846331Z",
+     "shell.execute_reply": "2023-06-24T15:53:10.845633Z"
     }
    },
    "outputs": [],
@@ -542,10 +528,10 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-17T04:34:51.908961Z",
-     "iopub.status.busy": "2023-06-17T04:34:51.908656Z",
-     "iopub.status.idle": "2023-06-17T04:34:53.774739Z",
-     "shell.execute_reply": "2023-06-17T04:34:53.773655Z"
+     "iopub.execute_input": "2023-06-24T15:53:10.849642Z",
+     "iopub.status.busy": "2023-06-24T15:53:10.849362Z",
+     "iopub.status.idle": "2023-06-24T15:53:12.519624Z",
+     "shell.execute_reply": "2023-06-24T15:53:12.517148Z"
     }
    },
    "outputs": [
@@ -608,13 +594,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-17T04:34:53.779959Z",
-     "iopub.status.busy": "2023-06-17T04:34:53.779631Z",
-     "iopub.status.idle": "2023-06-17T04:34:53.784063Z",
-     "shell.execute_reply": "2023-06-17T04:34:53.783057Z"
+     "iopub.execute_input": "2023-06-24T15:53:12.526382Z",
+     "iopub.status.busy": "2023-06-24T15:53:12.525977Z",
+     "iopub.status.idle": "2023-06-24T15:53:12.616355Z",
+     "shell.execute_reply": "2023-06-24T15:53:12.615142Z"
     }
    },
    "outputs": [
@@ -656,7 +642,7 @@
        "0  UDF FaceDetector successfully dropped"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
