--- a/tutorials/08-chatgpt.ipynb
+++ b/tutorials/08-chatgpt.ipynb
@@ -36,13 +36,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-17T04:36:32.249549Z",
-     "iopub.status.busy": "2023-06-17T04:36:32.249067Z",
-     "iopub.status.idle": "2023-06-17T04:36:40.567227Z",
-     "shell.execute_reply": "2023-06-17T04:36:40.566332Z"
+     "iopub.execute_input": "2023-06-24T15:54:02.528961Z",
+     "iopub.status.busy": "2023-06-24T15:54:02.528438Z",
+     "iopub.status.idle": "2023-06-24T15:54:10.286788Z",
+     "shell.execute_reply": "2023-06-24T15:54:10.285797Z"
     }
    },
    "outputs": [
@@ -50,14 +50,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Note: you may need to restart the kernel to use updated packages.\n"
+      "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\r\n",
+      "grpcio-tools 1.56.0 requires protobuf<5.0dev,>=4.21.6, but you have protobuf 3.20.1 which is incompatible.\r\n",
+      "ray 2.4.0 requires grpcio<=1.51.3,>=1.42.0; python_version >= \"3.10\" and sys_platform != \"darwin\", but you have grpcio 1.56.0 which is incompatible.\u001b[0m\u001b[31m\r\n",
+      "\u001b[0m"
      ]
     },
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Could not find image processor class in the image processor config or the model config. Loading based on pattern matching with the model's feature extractor configuration.\n"
+      "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
@@ -77,13 +80,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-17T04:36:40.572073Z",
-     "iopub.status.busy": "2023-06-17T04:36:40.571781Z",
-     "iopub.status.idle": "2023-06-17T04:36:42.009165Z",
-     "shell.execute_reply": "2023-06-17T04:36:42.007344Z"
+     "iopub.execute_input": "2023-06-24T15:54:10.291800Z",
+     "iopub.status.busy": "2023-06-24T15:54:10.291544Z",
+     "iopub.status.idle": "2023-06-24T15:54:11.702477Z",
+     "shell.execute_reply": "2023-06-24T15:54:11.700539Z"
     }
    },
    "outputs": [
@@ -91,27 +94,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2023-06-17 00:46:24--  https://www.dropbox.com/s/rfm1kds2mv77pca/russia_ukraine.mp4?dl=0\n",
-      "Resolving www.dropbox.com (www.dropbox.com)... 162.125.5.18, 2620:100:601f:18::a27d:912\n",
-      "Connecting to www.dropbox.com (www.dropbox.com)|162.125.5.18|:443... connected.\n",
-      "HTTP request sent, awaiting response... 302 Found\n",
-      "Location: /s/raw/rfm1kds2mv77pca/russia_ukraine.mp4 [following]\n",
-      "--2023-06-17 00:46:24--  https://www.dropbox.com/s/raw/rfm1kds2mv77pca/russia_ukraine.mp4\n",
-      "Reusing existing connection to www.dropbox.com:443.\n",
-      "HTTP request sent, awaiting response... 302 Found\n",
-      "Location: https://uc097ecffd1c722dd8cc24688cc3.dl.dropboxusercontent.com/cd/0/inline/B-LyTRbfB-OdytIJzCyYryP0ueyCd22Y568u4Db6oEA_myn2wzXryIusBvGJxnhsQUs2GqaP3FZjUgAaiHUybuhrePYJZbTiD6U4Ef2Oqa_-5esrinFdFEddIiUvEbyA3kSBSdLGdHmtjkO7JP6gVnERyxT1QMUyMkfNGGuD36CUuw/file# [following]\n",
-      "--2023-06-17 00:46:25--  https://uc097ecffd1c722dd8cc24688cc3.dl.dropboxusercontent.com/cd/0/inline/B-LyTRbfB-OdytIJzCyYryP0ueyCd22Y568u4Db6oEA_myn2wzXryIusBvGJxnhsQUs2GqaP3FZjUgAaiHUybuhrePYJZbTiD6U4Ef2Oqa_-5esrinFdFEddIiUvEbyA3kSBSdLGdHmtjkO7JP6gVnERyxT1QMUyMkfNGGuD36CUuw/file\n",
-      "Resolving uc097ecffd1c722dd8cc24688cc3.dl.dropboxusercontent.com (uc097ecffd1c722dd8cc24688cc3.dl.dropboxusercontent.com)... 162.125.5.15, 2620:100:601f:15::a27d:90f\n",
-      "Connecting to uc097ecffd1c722dd8cc24688cc3.dl.dropboxusercontent.com (uc097ecffd1c722dd8cc24688cc3.dl.dropboxusercontent.com)|162.125.5.15|:443... connected.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 5341582 (5.1M) [video/mp4]\n",
-      "Saving to: 'russia_ukraine.mp4'\n",
-      "\n",
-      "russia_ukraine.mp4  100%[===================>]   5.09M  26.4MB/s    in 0.2s    \n",
-      "\n",
-      "2023-06-17 00:46:28 (26.4 MB/s) - 'russia_ukraine.mp4' saved [5341582/5341582]\n",
-      "\n",
-      "File 'chatgpt.py' already there; not retrieving.\n"
+      "File ‘russia_ukraine.mp4’ already there; not retrieving.\r\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File ‘chatgpt.py’ already there; not retrieving.\r\n"
      ]
     }
    ],
@@ -133,13 +123,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-17T04:36:42.015427Z",
-     "iopub.status.busy": "2023-06-17T04:36:42.014886Z",
-     "iopub.status.idle": "2023-06-17T04:36:42.422968Z",
-     "shell.execute_reply": "2023-06-17T04:36:42.421867Z"
+     "iopub.execute_input": "2023-06-24T15:54:11.708217Z",
+     "iopub.status.busy": "2023-06-24T15:54:11.707861Z",
+     "iopub.status.idle": "2023-06-24T15:54:11.713829Z",
+     "shell.execute_reply": "2023-06-24T15:54:11.712777Z"
     }
    },
    "outputs": [],
@@ -152,13 +142,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-23T00:06:31.653670Z",
-     "iopub.status.busy": "2023-05-23T00:06:31.653419Z",
-     "iopub.status.idle": "2023-05-23T00:06:31.792077Z",
-     "shell.execute_reply": "2023-05-23T00:06:31.791031Z"
+     "iopub.execute_input": "2023-06-24T15:54:11.717373Z",
+     "iopub.status.busy": "2023-06-24T15:54:11.717075Z",
+     "iopub.status.idle": "2023-06-24T15:54:11.920458Z",
+     "shell.execute_reply": "2023-06-24T15:54:11.919635Z"
     }
    },
    "outputs": [
@@ -200,7 +190,7 @@
        "0  UDF ChatGPT successfully added to the database."
       ]
      },
-     "execution_count": 24,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,23 +223,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-23T00:06:31.796595Z",
-     "iopub.status.busy": "2023-05-23T00:06:31.796352Z",
-     "iopub.status.idle": "2023-05-23T00:06:31.949025Z",
-     "shell.execute_reply": "2023-05-23T00:06:31.947809Z"
+     "iopub.execute_input": "2023-06-24T15:54:11.924586Z",
+     "iopub.status.busy": "2023-06-24T15:54:11.924330Z",
+     "iopub.status.idle": "2023-06-24T15:54:12.249303Z",
+     "shell.execute_reply": "2023-06-24T15:54:12.248505Z"
     }
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "06-17-2023 00:46:29 WARNING[drop_object_executor:drop_object_executor.py:_handle_drop_table:0050] Table: VIDEOS does not exist\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -288,7 +271,7 @@
        "0  Number of loaded VIDEO: 1"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,13 +284,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-23T00:06:31.953783Z",
-     "iopub.status.busy": "2023-05-23T00:06:31.953419Z",
-     "iopub.status.idle": "2023-05-23T00:06:34.511509Z",
-     "shell.execute_reply": "2023-05-23T00:06:34.510590Z"
+     "iopub.execute_input": "2023-06-24T15:54:12.253607Z",
+     "iopub.status.busy": "2023-06-24T15:54:12.253376Z",
+     "iopub.status.idle": "2023-06-24T15:54:15.415556Z",
+     "shell.execute_reply": "2023-06-24T15:54:15.414673Z"
     }
    },
    "outputs": [
@@ -315,8 +298,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "06-17-2023 00:46:29 WARNING[drop_object_executor:drop_object_executor.py:_handle_drop_udf:0082] UDF SpeechRecognizer does not exist, therefore cannot be dropped.\n",
-      "/nethome/jarulraj3/eva/test_evadb/lib/python3.10/site-packages/transformers/generation/utils.py:1353: UserWarning: Using `max_length`'s default (448) to control the generation length. This behaviour is deprecated and will be removed from the config in v5 of Transformers -- we recommend using `max_new_tokens` to control the maximum length of the generation.\n",
+      "06-24-2023 11:54:12 WARNING[drop_object_executor:drop_object_executor.py:_handle_drop_udf:0081] UDF SpeechRecognizer does not exist, therefore cannot be dropped.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/jarulraj3/eva/test_evadb/lib/python3.10/site-packages/transformers/generation/utils.py:1353: UserWarning: Using `max_length`'s default (448) to control the generation length. This behaviour is deprecated and will be removed from the config in v5 of Transformers -- we recommend using `max_new_tokens` to control the maximum length of the generation.\n",
       "  warnings.warn(\n"
      ]
     },
@@ -358,7 +347,7 @@
        "0  UDF SpeechRecognizer successfully added to the..."
       ]
      },
-     "execution_count": 26,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,13 +368,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-23T00:06:34.516237Z",
-     "iopub.status.busy": "2023-05-23T00:06:34.515975Z",
-     "iopub.status.idle": "2023-05-23T00:06:44.316466Z",
-     "shell.execute_reply": "2023-05-23T00:06:44.315248Z"
+     "iopub.execute_input": "2023-06-24T15:54:15.420395Z",
+     "iopub.status.busy": "2023-06-24T15:54:15.419978Z",
+     "iopub.status.idle": "2023-06-24T15:54:25.464805Z",
+     "shell.execute_reply": "2023-06-24T15:54:25.463931Z"
     }
    },
    "outputs": [
@@ -393,10 +382,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "06-17-2023 00:46:32 WARNING[drop_object_executor:drop_object_executor.py:_handle_drop_table:0050] Table: TEXT_SUMMARY does not exist\n",
-      "2023-06-17 00:46:34,758\tINFO worker.py:1625 -- Started a local Ray instance.\n",
-      "\u001b[2m\u001b[36m(ray_parallel pid=2627107)\u001b[0m /nethome/jarulraj3/eva/test_evadb/lib/python3.10/site-packages/transformers/generation/utils.py:1353: UserWarning: Using `max_length`'s default (448) to control the generation length. This behaviour is deprecated and will be removed from the config in v5 of Transformers -- we recommend using `max_new_tokens` to control the maximum length of the generation.\n",
-      "\u001b[2m\u001b[36m(ray_parallel pid=2627107)\u001b[0m   warnings.warn(\n"
+      "/home/jarulraj3/eva/test_evadb/lib/python3.10/site-packages/transformers/generation/utils.py:1353: UserWarning: Using `max_length`'s default (448) to control the generation length. This behaviour is deprecated and will be removed from the config in v5 of Transformers -- we recommend using `max_new_tokens` to control the maximum length of the generation.\n",
+      "  warnings.warn(\n"
      ]
     },
     {
@@ -433,7 +420,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,13 +441,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-23T00:06:44.321428Z",
-     "iopub.status.busy": "2023-05-23T00:06:44.321153Z",
-     "iopub.status.idle": "2023-05-23T00:06:47.200517Z",
-     "shell.execute_reply": "2023-05-23T00:06:47.199220Z"
+     "iopub.execute_input": "2023-06-24T15:54:25.469808Z",
+     "iopub.status.busy": "2023-06-24T15:54:25.469513Z",
+     "iopub.status.idle": "2023-06-24T15:54:26.872718Z",
+     "shell.execute_reply": "2023-06-24T15:54:26.871665Z"
     }
    },
    "outputs": [
@@ -502,7 +489,7 @@
        "0  Yes, the video summary is related to the Ukrai..."
       ]
      },
-     "execution_count": 29,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,13 +513,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-23T00:06:47.205930Z",
-     "iopub.status.busy": "2023-05-23T00:06:47.205429Z",
-     "iopub.status.idle": "2023-05-23T00:06:47.450863Z",
-     "shell.execute_reply": "2023-05-23T00:06:47.450094Z"
+     "iopub.execute_input": "2023-06-24T15:54:26.877444Z",
+     "iopub.status.busy": "2023-06-24T15:54:26.877161Z",
+     "iopub.status.idle": "2023-06-24T15:54:27.865422Z",
+     "shell.execute_reply": "2023-06-24T15:54:27.864278Z"
     }
    },
    "outputs": [
@@ -540,33 +527,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2023-06-17 00:51:02--  https://www.dropbox.com/s/u66im8jw2s1dmuw/snl.mp4?dl=0\n",
-      "Resolving www.dropbox.com (www.dropbox.com)... 162.125.5.18, 2620:100:601f:18::a27d:912\n",
-      "Connecting to www.dropbox.com (www.dropbox.com)|162.125.5.18|:443... connected.\n",
-      "HTTP request sent, awaiting response... 302 Found\n",
-      "Location: /s/raw/u66im8jw2s1dmuw/snl.mp4 [following]\n",
-      "--2023-06-17 00:51:02--  https://www.dropbox.com/s/raw/u66im8jw2s1dmuw/snl.mp4\n",
-      "Reusing existing connection to www.dropbox.com:443.\n",
-      "HTTP request sent, awaiting response... 302 Found\n",
-      "Location: https://uc6c52df43ed7de6f5fd0218310c.dl.dropboxusercontent.com/cd/0/inline/B-KmCchrnFb-umjFViXmS8ZQvVmAJ9I6f0d81EaSJq39A5eFpmOPZEKODatTy6FN4HQZiJUJs91r8x6_dX0QfxsabL-1iGbzx-lvdFlWD1LDKTXJH2tYC5I3NnWUmWqgW5m01rChaO3GXV2087MJNS29imvKNIEKxpc5BaUdY6J2gw/file# [following]\n",
-      "--2023-06-17 00:51:03--  https://uc6c52df43ed7de6f5fd0218310c.dl.dropboxusercontent.com/cd/0/inline/B-KmCchrnFb-umjFViXmS8ZQvVmAJ9I6f0d81EaSJq39A5eFpmOPZEKODatTy6FN4HQZiJUJs91r8x6_dX0QfxsabL-1iGbzx-lvdFlWD1LDKTXJH2tYC5I3NnWUmWqgW5m01rChaO3GXV2087MJNS29imvKNIEKxpc5BaUdY6J2gw/file\n",
-      "Resolving uc6c52df43ed7de6f5fd0218310c.dl.dropboxusercontent.com (uc6c52df43ed7de6f5fd0218310c.dl.dropboxusercontent.com)... 162.125.5.15, 2620:100:601f:15::a27d:90f\n",
-      "Connecting to uc6c52df43ed7de6f5fd0218310c.dl.dropboxusercontent.com (uc6c52df43ed7de6f5fd0218310c.dl.dropboxusercontent.com)|162.125.5.15|:443... connected.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 18793949 (18M) [video/mp4]\n",
-      "Saving to: 'snl.mp4'\n",
-      "\n",
-      "snl.mp4             100%[===================>]  17.92M  40.7MB/s    in 0.4s    \n",
-      "\n",
-      "2023-06-17 00:51:04 (40.7 MB/s) - 'snl.mp4' saved [18793949/18793949]\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "06-17-2023 00:51:04 WARNING[drop_object_executor:drop_object_executor.py:_handle_drop_table:0050] Table: SNL_VIDEO does not exist\n"
+      "File ‘snl.mp4’ already there; not retrieving.\r\n"
      ]
     },
     {
@@ -607,7 +568,7 @@
        "0  Number of loaded VIDEO: 1"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -623,13 +584,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-23T00:06:48.160342Z",
-     "iopub.status.busy": "2023-05-23T00:06:48.159881Z",
-     "iopub.status.idle": "2023-05-23T00:07:03.473346Z",
-     "shell.execute_reply": "2023-05-23T00:07:03.472552Z"
+     "iopub.execute_input": "2023-06-24T15:54:27.870530Z",
+     "iopub.status.busy": "2023-06-24T15:54:27.870145Z",
+     "iopub.status.idle": "2023-06-24T15:54:46.869765Z",
+     "shell.execute_reply": "2023-06-24T15:54:46.868904Z"
     }
    },
    "outputs": [
@@ -637,9 +598,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "06-17-2023 00:51:06 WARNING[drop_object_executor:drop_object_executor.py:_handle_drop_table:0050] Table: SNL_TEXT_SUMMARY does not exist\n",
-      "\u001b[2m\u001b[36m(ray_parallel pid=2627138)\u001b[0m   warnings.warn(\n",
-      "\u001b[2m\u001b[36m(ray_parallel pid=2627138)\u001b[0m   warnings.warn(\n"
+      "/home/jarulraj3/eva/test_evadb/lib/python3.10/site-packages/transformers/generation/utils.py:1353: UserWarning: Using `max_length`'s default (448) to control the generation length. This behaviour is deprecated and will be removed from the config in v5 of Transformers -- we recommend using `max_new_tokens` to control the maximum length of the generation.\n",
+      "  warnings.warn(\n"
      ]
     },
     {
@@ -676,7 +636,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -705,13 +665,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-23T00:07:03.477539Z",
-     "iopub.status.busy": "2023-05-23T00:07:03.477298Z",
-     "iopub.status.idle": "2023-05-23T00:07:06.799483Z",
-     "shell.execute_reply": "2023-05-23T00:07:06.798725Z"
+     "iopub.execute_input": "2023-06-24T15:54:46.874457Z",
+     "iopub.status.busy": "2023-06-24T15:54:46.874205Z",
+     "iopub.status.idle": "2023-06-24T15:54:48.484113Z",
+     "shell.execute_reply": "2023-06-24T15:54:48.482744Z"
     }
    },
    "outputs": [
@@ -753,7 +713,7 @@
        "0  No, this video summary is not related to the U..."
       ]
      },
-     "execution_count": 32,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -777,13 +737,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-23T00:07:06.803728Z",
-     "iopub.status.busy": "2023-05-23T00:07:06.803480Z",
-     "iopub.status.idle": "2023-05-23T00:07:10.172255Z",
-     "shell.execute_reply": "2023-05-23T00:07:10.171521Z"
+     "iopub.execute_input": "2023-06-24T15:54:48.489335Z",
+     "iopub.status.busy": "2023-06-24T15:54:48.489036Z",
+     "iopub.status.idle": "2023-06-24T15:54:50.036219Z",
+     "shell.execute_reply": "2023-06-24T15:54:50.035125Z"
     }
    },
    "outputs": [
@@ -825,7 +785,7 @@
        "0  Yes, the video summary is related to a hospita..."
       ]
      },
-     "execution_count": 33,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
