--- a/tutorials/12-query-pdf.ipynb
+++ b/tutorials/12-query-pdf.ipynb
@@ -52,10 +52,10 @@
    "id": "cc1741d4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-17T04:38:07.703510Z",
-     "iopub.status.busy": "2023-06-17T04:38:07.702780Z",
-     "iopub.status.idle": "2023-06-17T04:38:16.088236Z",
-     "shell.execute_reply": "2023-06-17T04:38:16.086545Z"
+     "iopub.execute_input": "2023-06-24T15:56:32.930528Z",
+     "iopub.status.busy": "2023-06-24T15:56:32.929877Z",
+     "iopub.status.idle": "2023-06-24T15:56:40.359345Z",
+     "shell.execute_reply": "2023-06-24T15:56:40.358177Z"
     }
    },
    "outputs": [
@@ -63,14 +63,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Note: you may need to restart the kernel to use updated packages.\n"
+      "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\r\n",
+      "grpcio-tools 1.56.0 requires protobuf<5.0dev,>=4.21.6, but you have protobuf 3.20.1 which is incompatible.\r\n",
+      "ray 2.4.0 requires grpcio<=1.51.3,>=1.42.0; python_version >= \"3.10\" and sys_platform != \"darwin\", but you have grpcio 1.56.0 which is incompatible.\u001b[0m\u001b[31m\r\n",
+      "\u001b[0m"
      ]
     },
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Could not find image processor class in the image processor config or the model config. Loading based on pattern matching with the model's feature extractor configuration.\n"
+      "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
@@ -95,10 +98,10 @@
    "id": "1ee8b17b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-17T04:38:16.094547Z",
-     "iopub.status.busy": "2023-06-17T04:38:16.093845Z",
-     "iopub.status.idle": "2023-06-17T04:38:16.812353Z",
-     "shell.execute_reply": "2023-06-17T04:38:16.810602Z"
+     "iopub.execute_input": "2023-06-24T15:56:40.365890Z",
+     "iopub.status.busy": "2023-06-24T15:56:40.365517Z",
+     "iopub.status.idle": "2023-06-24T15:56:41.032142Z",
+     "shell.execute_reply": "2023-06-24T15:56:41.030294Z"
     }
    },
    "outputs": [
@@ -130,20 +133,13 @@
    "id": "98061621",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-17T04:38:16.818232Z",
-     "iopub.status.busy": "2023-06-17T04:38:16.817703Z",
-     "iopub.status.idle": "2023-06-17T04:38:16.917598Z",
-     "shell.execute_reply": "2023-06-17T04:38:16.916679Z"
+     "iopub.execute_input": "2023-06-24T15:56:41.037878Z",
+     "iopub.status.busy": "2023-06-24T15:56:41.037514Z",
+     "iopub.status.idle": "2023-06-24T15:56:41.198440Z",
+     "shell.execute_reply": "2023-06-24T15:56:41.197216Z"
     }
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "06-17-2023 00:38:16 WARNING[drop_object_executor:drop_object_executor.py:_handle_drop_table:0050] Table: MyPDFs does not exist\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -207,10 +203,10 @@
    "id": "f2674110",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-17T04:38:16.921925Z",
-     "iopub.status.busy": "2023-06-17T04:38:16.921675Z",
-     "iopub.status.idle": "2023-06-17T04:38:17.364967Z",
-     "shell.execute_reply": "2023-06-17T04:38:17.364088Z"
+     "iopub.execute_input": "2023-06-24T15:56:41.201762Z",
+     "iopub.status.busy": "2023-06-24T15:56:41.201379Z",
+     "iopub.status.idle": "2023-06-24T15:56:41.782889Z",
+     "shell.execute_reply": "2023-06-24T15:56:41.782062Z"
     }
    },
    "outputs": [
@@ -591,10 +587,10 @@
    "id": "b476274d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-17T04:38:17.369666Z",
-     "iopub.status.busy": "2023-06-17T04:38:17.369324Z",
-     "iopub.status.idle": "2023-06-17T04:38:17.965401Z",
-     "shell.execute_reply": "2023-06-17T04:38:17.964694Z"
+     "iopub.execute_input": "2023-06-24T15:56:41.787771Z",
+     "iopub.status.busy": "2023-06-24T15:56:41.787433Z",
+     "iopub.status.idle": "2023-06-24T15:56:42.198853Z",
+     "shell.execute_reply": "2023-06-24T15:56:42.198011Z"
     }
    },
    "outputs": [
@@ -675,21 +671,13 @@
    "id": "d2c46f7e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-17T04:38:17.969912Z",
-     "iopub.status.busy": "2023-06-17T04:38:17.969673Z",
-     "iopub.status.idle": "2023-06-17T04:38:19.813763Z",
-     "shell.execute_reply": "2023-06-17T04:38:19.812972Z"
+     "iopub.execute_input": "2023-06-24T15:56:42.203210Z",
+     "iopub.status.busy": "2023-06-24T15:56:42.202966Z",
+     "iopub.status.idle": "2023-06-24T15:56:42.219531Z",
+     "shell.execute_reply": "2023-06-24T15:56:42.218864Z"
     }
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Xformers is not installed correctly. If you want to use memory_efficient_attention to accelerate training use the following command to install Xformers\n",
-      "pip install xformers.\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -717,7 +705,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>UDF TextClassifier successfully added to the d...</td>\n",
+       "      <td>UDF TextClassifier already exists, nothing added.</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -725,7 +713,7 @@
       ],
       "text/plain": [
        "                                                   0\n",
-       "0  UDF TextClassifier successfully added to the d..."
+       "0  UDF TextClassifier already exists, nothing added."
       ]
      },
      "execution_count": 6,
@@ -746,20 +734,13 @@
    "id": "fd75bf79",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-17T04:38:19.818230Z",
-     "iopub.status.busy": "2023-06-17T04:38:19.817764Z",
-     "iopub.status.idle": "2023-06-17T04:38:31.914523Z",
-     "shell.execute_reply": "2023-06-17T04:38:31.913666Z"
+     "iopub.execute_input": "2023-06-24T15:56:42.223503Z",
+     "iopub.status.busy": "2023-06-24T15:56:42.223186Z",
+     "iopub.status.idle": "2023-06-24T15:56:42.237901Z",
+     "shell.execute_reply": "2023-06-24T15:56:42.237363Z"
     }
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Your max_length is set to 142, but your input_length is only 11. Since this is a summarization task, where outputs shorter than the input are typically wanted, you might consider decreasing max_length manually, e.g. summarizer('...', max_length=5)\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -787,7 +768,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>UDF TextSummarizer successfully added to the d...</td>\n",
+       "      <td>UDF TextSummarizer already exists, nothing added.</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -795,7 +776,7 @@
       ],
       "text/plain": [
        "                                                   0\n",
-       "0  UDF TextSummarizer successfully added to the d..."
+       "0  UDF TextSummarizer already exists, nothing added."
       ]
      },
      "execution_count": 7,
@@ -825,10 +806,10 @@
    "id": "42ddaccb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-17T04:38:31.918812Z",
-     "iopub.status.busy": "2023-06-17T04:38:31.918408Z",
-     "iopub.status.idle": "2023-06-17T04:38:57.600107Z",
-     "shell.execute_reply": "2023-06-17T04:38:57.599045Z"
+     "iopub.execute_input": "2023-06-24T15:56:42.241765Z",
+     "iopub.status.busy": "2023-06-24T15:56:42.241455Z",
+     "iopub.status.idle": "2023-06-24T15:57:02.751364Z",
+     "shell.execute_reply": "2023-06-24T15:57:02.750489Z"
     }
    },
    "outputs": [
@@ -836,21 +817,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-06-17 00:38:33,608\tINFO worker.py:1625 -- Started a local Ray instance.\n"
+      "Your max_length is set to 142, but your input_length is only 20. Since this is a summarization task, where outputs shorter than the input are typically wanted, you might consider decreasing max_length manually, e.g. summarizer('...', max_length=10)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[2m\u001b[36m(ray_parallel pid=2613632)\u001b[0m Your max_length is set to 142, but your input_length is only 20. Since this is a summarization task, where outputs shorter than the input are typically wanted, you might consider decreasing max_length manually, e.g. summarizer('...', max_length=10)\n"
+      "Xformers is not installed correctly. If you want to use memory_efficient_attention to accelerate training use the following command to install Xformers\n",
+      "pip install xformers.\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[2m\u001b[36m(ray_parallel pid=2613632)\u001b[0m Your max_length is set to 142, but your input_length is only 97. Since this is a summarization task, where outputs shorter than the input are typically wanted, you might consider decreasing max_length manually, e.g. summarizer('...', max_length=48)\n"
+      "Your max_length is set to 142, but your input_length is only 97. Since this is a summarization task, where outputs shorter than the input are typically wanted, you might consider decreasing max_length manually, e.g. summarizer('...', max_length=48)\n"
      ]
     },
     {
