--- a/tutorials/15-asl-action-recognition.ipynb
+++ b/tutorials/15-asl-action-recognition.ipynb
@@ -48,10 +48,10 @@
      "base_uri": "https://localhost:8080/"
     },
     "execution": {
-     "iopub.execute_input": "2023-06-17T04:35:00.055169Z",
-     "iopub.status.busy": "2023-06-17T04:35:00.054815Z",
-     "iopub.status.idle": "2023-06-17T04:35:07.992517Z",
-     "shell.execute_reply": "2023-06-17T04:35:07.991419Z"
+     "iopub.execute_input": "2023-06-24T15:57:38.031600Z",
+     "iopub.status.busy": "2023-06-24T15:57:38.031070Z",
+     "iopub.status.idle": "2023-06-24T15:57:44.646875Z",
+     "shell.execute_reply": "2023-06-24T15:57:44.645880Z"
     },
     "id": "u6pQ1NdcxEGb",
     "outputId": "297b52a8-11fa-461b-c379-fb4c7c15e4fd"
@@ -62,13 +62,6 @@
      "output_type": "stream",
      "text": [
       "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Could not find image processor class in the image processor config or the model config. Loading based on pattern matching with the model's feature extractor configuration.\n"
      ]
     }
    ],
@@ -94,10 +87,10 @@
      "base_uri": "https://localhost:8080/"
     },
     "execution": {
-     "iopub.execute_input": "2023-06-17T04:35:07.997645Z",
-     "iopub.status.busy": "2023-06-17T04:35:07.997215Z",
-     "iopub.status.idle": "2023-06-17T04:35:10.118240Z",
-     "shell.execute_reply": "2023-06-17T04:35:10.116430Z"
+     "iopub.execute_input": "2023-06-24T15:57:44.652358Z",
+     "iopub.status.busy": "2023-06-24T15:57:44.651995Z",
+     "iopub.status.idle": "2023-06-24T15:57:46.708001Z",
+     "shell.execute_reply": "2023-06-24T15:57:46.706150Z"
     },
     "id": "4Uv15iq9xEGc",
     "outputId": "b8f8b9d7-74b5-45b8-99dd-76ff41b221eb"
@@ -153,10 +146,10 @@
      "base_uri": "https://localhost:8080/"
     },
     "execution": {
-     "iopub.execute_input": "2023-06-17T04:35:10.123663Z",
-     "iopub.status.busy": "2023-06-17T04:35:10.123343Z",
-     "iopub.status.idle": "2023-06-17T04:35:10.339213Z",
-     "shell.execute_reply": "2023-06-17T04:35:10.338402Z"
+     "iopub.execute_input": "2023-06-24T15:57:46.714476Z",
+     "iopub.status.busy": "2023-06-24T15:57:46.713875Z",
+     "iopub.status.idle": "2023-06-24T15:57:46.933796Z",
+     "shell.execute_reply": "2023-06-24T15:57:46.933086Z"
     },
     "id": "Tsjzsq2rxEGc",
     "outputId": "2b57d26a-941d-40bc-be15-8e176d262b7b"
@@ -228,15 +221,22 @@
      "base_uri": "https://localhost:8080/"
     },
     "execution": {
-     "iopub.execute_input": "2023-06-17T04:35:10.343961Z",
-     "iopub.status.busy": "2023-06-17T04:35:10.343723Z",
-     "iopub.status.idle": "2023-06-17T04:35:11.079580Z",
-     "shell.execute_reply": "2023-06-17T04:35:11.078715Z"
+     "iopub.execute_input": "2023-06-24T15:57:46.937702Z",
+     "iopub.status.busy": "2023-06-24T15:57:46.937468Z",
+     "iopub.status.idle": "2023-06-24T15:57:47.955480Z",
+     "shell.execute_reply": "2023-06-24T15:57:47.954745Z"
     },
     "id": "55nnlBXyxEGe",
     "outputId": "db138217-80d0-4fe9-bd73-6a3c7136bd93"
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "06-24-2023 11:57:46 WARNING[drop_object_executor:drop_object_executor.py:_handle_drop_udf:0081] UDF ASLActionRecognition does not exist, therefore cannot be dropped.\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -308,23 +308,15 @@
      "base_uri": "https://localhost:8080/"
     },
     "execution": {
-     "iopub.execute_input": "2023-06-17T04:35:11.083587Z",
-     "iopub.status.busy": "2023-06-17T04:35:11.083304Z",
-     "iopub.status.idle": "2023-06-17T04:35:20.217961Z",
-     "shell.execute_reply": "2023-06-17T04:35:20.216436Z"
+     "iopub.execute_input": "2023-06-24T15:57:47.960117Z",
+     "iopub.status.busy": "2023-06-24T15:57:47.959867Z",
+     "iopub.status.idle": "2023-06-24T15:57:51.422999Z",
+     "shell.execute_reply": "2023-06-24T15:57:51.421970Z"
     },
     "id": "CCAz73LExEGf",
     "outputId": "dd7c4643-c7cf-45ea-e4f4-8ef419ecf5bf"
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-06-17 00:35:13,453\tINFO worker.py:1625 -- Started a local Ray instance.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "response = cursor.query(\n",
     "    \"\"\"SELECT FIRST(id), ASLActionRecognition(SEGMENT(data)) \n",
@@ -338,10 +330,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-17T04:35:20.223049Z",
-     "iopub.status.busy": "2023-06-17T04:35:20.222568Z",
-     "iopub.status.idle": "2023-06-17T04:35:20.777957Z",
-     "shell.execute_reply": "2023-06-17T04:35:20.777027Z"
+     "iopub.execute_input": "2023-06-24T15:57:51.428176Z",
+     "iopub.status.busy": "2023-06-24T15:57:51.427906Z",
+     "iopub.status.idle": "2023-06-24T15:57:51.693032Z",
+     "shell.execute_reply": "2023-06-24T15:57:51.692241Z"
     },
     "id": "8hT1LiYrxEGf"
    },
@@ -402,10 +394,10 @@
      "height": 1000
     },
     "execution": {
-     "iopub.execute_input": "2023-06-17T04:35:20.782952Z",
-     "iopub.status.busy": "2023-06-17T04:35:20.782507Z",
-     "iopub.status.idle": "2023-06-17T04:35:22.687871Z",
-     "shell.execute_reply": "2023-06-17T04:35:22.685975Z"
+     "iopub.execute_input": "2023-06-24T15:57:51.697791Z",
+     "iopub.status.busy": "2023-06-24T15:57:51.697471Z",
+     "iopub.status.idle": "2023-06-24T15:57:53.298609Z",
+     "shell.execute_reply": "2023-06-24T15:57:53.297571Z"
     },
     "id": "GrWkND_GxEGg",
     "outputId": "9c9adecf-f241-4e82-c1d5-566207a39d22"
@@ -459,11 +451,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-06-24T15:57:53.301712Z",
+     "iopub.status.busy": "2023-06-24T15:57:53.301422Z",
+     "iopub.status.idle": "2023-06-24T15:57:53.337627Z",
+     "shell.execute_reply": "2023-06-24T15:57:53.336464Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>UDF ASLActionRecognition successfully dropped</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               0\n",
+       "0  UDF ASLActionRecognition successfully dropped"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cursor.drop_udf(\"ASLActionRecognition\").df()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Close cursor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-06-24T15:57:53.341438Z",
+     "iopub.status.busy": "2023-06-24T15:57:53.340958Z",
+     "iopub.status.idle": "2023-06-24T15:57:53.347550Z",
+     "shell.execute_reply": "2023-06-24T15:57:53.346888Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "cursor.close()"
    ]
   }
  ],
