--- a/tutorials/06-loading-structured-data.ipynb
+++ b/tutorials/06-loading-structured-data.ipynb
@@ -43,10 +43,10 @@
    "id": "c758b60b-e75e-4128-805d-46a210638daf",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-17T04:35:28.884278Z",
-     "iopub.status.busy": "2023-06-17T04:35:28.883704Z",
-     "iopub.status.idle": "2023-06-17T04:35:36.878843Z",
-     "shell.execute_reply": "2023-06-17T04:35:36.877525Z"
+     "iopub.execute_input": "2023-06-24T15:53:15.137115Z",
+     "iopub.status.busy": "2023-06-24T15:53:15.136582Z",
+     "iopub.status.idle": "2023-06-24T15:53:21.970562Z",
+     "shell.execute_reply": "2023-06-24T15:53:21.969608Z"
     }
    },
    "outputs": [
@@ -81,10 +81,10 @@
    "id": "8897b9bb-0993-4eb0-959d-6484a651a90f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-17T04:35:36.883640Z",
-     "iopub.status.busy": "2023-06-17T04:35:36.883349Z",
-     "iopub.status.idle": "2023-06-17T04:35:36.943655Z",
-     "shell.execute_reply": "2023-06-17T04:35:36.942651Z"
+     "iopub.execute_input": "2023-06-24T15:53:21.975671Z",
+     "iopub.status.busy": "2023-06-24T15:53:21.975369Z",
+     "iopub.status.idle": "2023-06-24T15:53:21.999513Z",
+     "shell.execute_reply": "2023-06-24T15:53:21.998867Z"
     },
     "tags": []
    },
@@ -93,7 +93,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "06-24-2023 10:49:09 WARNING[executor_utils:executor_utils.py:handle_if_not_exists:0083] Table: bddtestmeta already exists\n"
+      "06-24-2023 11:53:21 WARNING[executor_utils:executor_utils.py:handle_if_not_exists:0083] Table: bddtestmeta already exists\n"
      ]
     },
     {
@@ -167,10 +167,10 @@
    "id": "62def7ce-3f83-4fa0-b9fd-2e553b3919ba",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-17T04:35:36.947607Z",
-     "iopub.status.busy": "2023-06-17T04:35:36.947363Z",
-     "iopub.status.idle": "2023-06-17T04:35:38.354832Z",
-     "shell.execute_reply": "2023-06-17T04:35:38.352895Z"
+     "iopub.execute_input": "2023-06-24T15:53:22.003147Z",
+     "iopub.status.busy": "2023-06-24T15:53:22.002918Z",
+     "iopub.status.idle": "2023-06-24T15:53:23.351067Z",
+     "shell.execute_reply": "2023-06-24T15:53:23.349280Z"
     }
    },
    "outputs": [
@@ -178,9 +178,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File 'bddtest.zip' already there; not retrieving.\n",
-      "\n",
-      "Archive:  bddtest.zip\n"
+      "File ‘bddtest.zip’ already there; not retrieving.\r\n",
+      "\r\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Archive:  bddtest.zip\r\n"
      ]
     }
    ],
@@ -207,10 +213,10 @@
    "id": "cf8415ac-f9e0-4bee-b2aa-b4e104b10a4b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-17T04:35:38.360138Z",
-     "iopub.status.busy": "2023-06-17T04:35:38.359792Z",
-     "iopub.status.idle": "2023-06-17T04:35:39.376690Z",
-     "shell.execute_reply": "2023-06-17T04:35:39.375690Z"
+     "iopub.execute_input": "2023-06-24T15:53:23.356954Z",
+     "iopub.status.busy": "2023-06-24T15:53:23.356522Z",
+     "iopub.status.idle": "2023-06-24T15:53:24.318170Z",
+     "shell.execute_reply": "2023-06-24T15:53:24.317451Z"
     }
    },
    "outputs": [
@@ -279,10 +285,10 @@
    "id": "95b1e0a4-d9f5-40f2-830f-69c8c9f21172",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-17T04:35:39.380493Z",
-     "iopub.status.busy": "2023-06-17T04:35:39.380228Z",
-     "iopub.status.idle": "2023-06-17T04:35:39.605515Z",
-     "shell.execute_reply": "2023-06-17T04:35:39.604608Z"
+     "iopub.execute_input": "2023-06-24T15:53:24.322941Z",
+     "iopub.status.busy": "2023-06-24T15:53:24.322705Z",
+     "iopub.status.idle": "2023-06-24T15:53:24.625020Z",
+     "shell.execute_reply": "2023-06-24T15:53:24.624202Z"
     },
     "tags": []
    },
@@ -353,13 +359,88 @@
    "id": "69e378d4-4d30-47cf-84c8-8fe56afe517e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-17T04:35:39.610081Z",
-     "iopub.status.busy": "2023-06-17T04:35:39.609821Z",
-     "iopub.status.idle": "2023-06-17T04:35:51.865301Z",
-     "shell.execute_reply": "2023-06-17T04:35:51.863821Z"
+     "iopub.execute_input": "2023-06-24T15:53:24.629561Z",
+     "iopub.status.busy": "2023-06-24T15:53:24.629326Z",
+     "iopub.status.idle": "2023-06-24T15:53:29.903979Z",
+     "shell.execute_reply": "2023-06-24T15:53:29.903087Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>bddtest_1.id</th>\n",
+       "      <th>yolo.labels</th>\n",
+       "      <th>yolo.bboxes</th>\n",
+       "      <th>yolo.scores</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>[car, stop sign, car, car, car, car, car, car,...</td>\n",
+       "      <td>[[490.404541015625, 332.927001953125, 716.9006...</td>\n",
+       "      <td>[0.93, 0.91, 0.87, 0.82, 0.77, 0.73, 0.73, 0.5...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>[car, car, stop sign, car, car, car, car, car,...</td>\n",
+       "      <td>[[486.3106994628906, 331.76861572265625, 716.0...</td>\n",
+       "      <td>[0.92, 0.87, 0.85, 0.76, 0.74, 0.73, 0.62, 0.5...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>[car, stop sign, car, car, car, car, car, car,...</td>\n",
+       "      <td>[[481.7199401855469, 331.24237060546875, 715.6...</td>\n",
+       "      <td>[0.93, 0.9, 0.87, 0.79, 0.77, 0.74, 0.55, 0.54...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   bddtest_1.id                                        yolo.labels  \\\n",
+       "0             0  [car, stop sign, car, car, car, car, car, car,...   \n",
+       "1             1  [car, car, stop sign, car, car, car, car, car,...   \n",
+       "2             2  [car, stop sign, car, car, car, car, car, car,...   \n",
+       "\n",
+       "                                         yolo.bboxes  \\\n",
+       "0  [[490.404541015625, 332.927001953125, 716.9006...   \n",
+       "1  [[486.3106994628906, 331.76861572265625, 716.0...   \n",
+       "2  [[481.7199401855469, 331.24237060546875, 715.6...   \n",
+       "\n",
+       "                                         yolo.scores  \n",
+       "0  [0.93, 0.91, 0.87, 0.82, 0.77, 0.73, 0.73, 0.5...  \n",
+       "1  [0.92, 0.87, 0.85, 0.76, 0.74, 0.73, 0.62, 0.5...  \n",
+       "2  [0.93, 0.9, 0.87, 0.79, 0.77, 0.74, 0.55, 0.54...  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "query = cursor.table(\"bddtest_1\")\n",
     "query = query.filter(\"id < 3\")\n",
@@ -379,14 +460,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "2990038a-00ec-4d36-aae2-82a789f2389a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-17T04:35:51.870944Z",
-     "iopub.status.busy": "2023-06-17T04:35:51.870627Z",
-     "iopub.status.idle": "2023-06-17T04:35:52.310862Z",
-     "shell.execute_reply": "2023-06-17T04:35:52.309938Z"
+     "iopub.execute_input": "2023-06-24T15:53:29.908777Z",
+     "iopub.status.busy": "2023-06-24T15:53:29.908424Z",
+     "iopub.status.idle": "2023-06-24T15:53:30.391304Z",
+     "shell.execute_reply": "2023-06-24T15:53:30.390528Z"
     }
    },
    "outputs": [
@@ -489,8 +570,8 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3396</th>\n",
-       "      <td>3397</td>\n",
+       "      <th>6797</th>\n",
+       "      <td>11153</td>\n",
        "      <td>11581</td>\n",
        "      <td>1197</td>\n",
        "      <td>4</td>\n",
@@ -500,8 +581,8 @@
        "      <td>643</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3397</th>\n",
-       "      <td>3398</td>\n",
+       "      <th>6798</th>\n",
+       "      <td>11154</td>\n",
        "      <td>11582</td>\n",
        "      <td>1197</td>\n",
        "      <td>4</td>\n",
@@ -511,8 +592,8 @@
        "      <td>644</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3398</th>\n",
-       "      <td>3399</td>\n",
+       "      <th>6799</th>\n",
+       "      <td>11155</td>\n",
        "      <td>11583</td>\n",
        "      <td>1197</td>\n",
        "      <td>4</td>\n",
@@ -522,8 +603,8 @@
        "      <td>642</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3399</th>\n",
-       "      <td>3400</td>\n",
+       "      <th>6800</th>\n",
+       "      <td>11156</td>\n",
        "      <td>11584</td>\n",
        "      <td>1197</td>\n",
        "      <td>4</td>\n",
@@ -533,8 +614,8 @@
        "      <td>641</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3400</th>\n",
-       "      <td>3401</td>\n",
+       "      <th>6801</th>\n",
+       "      <td>11157</td>\n",
        "      <td>11585</td>\n",
        "      <td>1197</td>\n",
        "      <td>4</td>\n",
@@ -545,7 +626,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3401 rows × 8 columns</p>\n",
+       "<p>6802 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -556,11 +637,11 @@
        "3                       4            8188                     0   \n",
        "4                       5            8189                     0   \n",
        "...                   ...             ...                   ...   \n",
-       "3396                 3397           11581                  1197   \n",
-       "3397                 3398           11582                  1197   \n",
-       "3398                 3399           11583                  1197   \n",
-       "3399                 3400           11584                  1197   \n",
-       "3400                 3401           11585                  1197   \n",
+       "6797                11153           11581                  1197   \n",
+       "6798                11154           11582                  1197   \n",
+       "6799                11155           11583                  1197   \n",
+       "6800                11156           11584                  1197   \n",
+       "6801                11157           11585                  1197   \n",
        "\n",
        "      bddtestmeta.video_id bddtestmeta.dataset_name bddtestmeta.label  \\\n",
        "0                        4                  bddtest               car   \n",
@@ -569,11 +650,11 @@
        "3                        4                  bddtest               car   \n",
        "4                        4                  bddtest               car   \n",
        "...                    ...                      ...               ...   \n",
-       "3396                     4                  bddtest               car   \n",
-       "3397                     4                  bddtest               car   \n",
-       "3398                     4                  bddtest               car   \n",
-       "3399                     4                  bddtest               car   \n",
-       "3400                     4                  bddtest               car   \n",
+       "6797                     4                  bddtest               car   \n",
+       "6798                     4                  bddtest               car   \n",
+       "6799                     4                  bddtest               car   \n",
+       "6800                     4                  bddtest               car   \n",
+       "6801                     4                  bddtest               car   \n",
        "\n",
        "                                  bddtestmeta.bbox  bddtestmeta.object_id  \n",
        "0         [491.7783, 320.9238, 717.0901, 512.1478]                    512  \n",
@@ -582,13 +663,13 @@
        "3       [811.87067, 325.91223, 948.2217, 408.2217]                    515  \n",
        "4      [673.0254, 325.08084, 751.17786, 367.48267]                    516  \n",
        "...                                            ...                    ...  \n",
-       "3396     [554.96533, 335.88916, 588.2217, 378.291]                    643  \n",
-       "3397     [693.8106, 350.0231, 734.5497, 395.75058]                    644  \n",
-       "3398  [683.83374, 345.03464, 733.71826, 389.93073]                    642  \n",
-       "3399     [676.351, 346.69745, 699.6305, 384.11084]                    641  \n",
-       "3400      [662.2171, 351.6859, 681.3395, 377.4596]                    638  \n",
+       "6797     [554.96533, 335.88916, 588.2217, 378.291]                    643  \n",
+       "6798     [693.8106, 350.0231, 734.5497, 395.75058]                    644  \n",
+       "6799  [683.83374, 345.03464, 733.71826, 389.93073]                    642  \n",
+       "6800     [676.351, 346.69745, 699.6305, 384.11084]                    641  \n",
+       "6801      [662.2171, 351.6859, 681.3395, 377.4596]                    638  \n",
        "\n",
-       "[3401 rows x 8 columns]"
+       "[6802 rows x 8 columns]"
       ]
      },
      "execution_count": 7,
