--- a/tutorials/13-privategpt.ipynb
+++ b/tutorials/13-privategpt.ipynb
@@ -53,10 +53,10 @@
    "id": "b6b7f61d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-17T04:39:03.650921Z",
-     "iopub.status.busy": "2023-06-17T04:39:03.650363Z",
-     "iopub.status.idle": "2023-06-17T04:39:11.954131Z",
-     "shell.execute_reply": "2023-06-17T04:39:11.953198Z"
+     "iopub.execute_input": "2023-06-24T15:57:05.178702Z",
+     "iopub.status.busy": "2023-06-24T15:57:05.178162Z",
+     "iopub.status.idle": "2023-06-24T15:57:16.252416Z",
+     "shell.execute_reply": "2023-06-24T15:57:16.251414Z"
     }
    },
    "outputs": [
@@ -68,15 +68,25 @@
      ]
     },
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Could not find image processor class in the image processor config or the model config. Loading based on pattern matching with the model's feature extractor configuration.\n"
+      "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\r\n",
+      "ray 2.4.0 requires grpcio<=1.51.3,>=1.42.0; python_version >= \"3.10\" and sys_platform != \"darwin\", but you have grpcio 1.56.0 which is incompatible.\u001b[0m\u001b[31m\r\n",
+      "\u001b[0m"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
    "source": [
     "%pip install --quiet \"evadb[document,notebook]\"\n",
+    "%pip install --quiet qdrant_client\n",
     "from evadb.interfaces.relational.db import connect\n",
     "conn = connect()\n",
     "cursor = conn.cursor()"
@@ -97,10 +107,10 @@
    "id": "1ee8b17b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-17T04:39:11.959422Z",
-     "iopub.status.busy": "2023-06-17T04:39:11.958912Z",
-     "iopub.status.idle": "2023-06-17T04:39:13.358419Z",
-     "shell.execute_reply": "2023-06-17T04:39:13.356593Z"
+     "iopub.execute_input": "2023-06-24T15:57:16.256492Z",
+     "iopub.status.busy": "2023-06-24T15:57:16.256224Z",
+     "iopub.status.idle": "2023-06-24T15:57:17.665710Z",
+     "shell.execute_reply": "2023-06-24T15:57:17.664027Z"
     }
    },
    "outputs": [
@@ -141,10 +151,10 @@
    "id": "56913976",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-17T04:39:13.364034Z",
-     "iopub.status.busy": "2023-06-17T04:39:13.363528Z",
-     "iopub.status.idle": "2023-06-17T04:39:13.529799Z",
-     "shell.execute_reply": "2023-06-17T04:39:13.528984Z"
+     "iopub.execute_input": "2023-06-24T15:57:17.671555Z",
+     "iopub.status.busy": "2023-06-24T15:57:17.671222Z",
+     "iopub.status.idle": "2023-06-24T15:57:17.846001Z",
+     "shell.execute_reply": "2023-06-24T15:57:17.845109Z"
     }
    },
    "outputs": [],
@@ -169,10 +179,10 @@
    "id": "f2674110",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-17T04:39:13.534231Z",
-     "iopub.status.busy": "2023-06-17T04:39:13.533978Z",
-     "iopub.status.idle": "2023-06-17T04:39:17.701180Z",
-     "shell.execute_reply": "2023-06-17T04:39:17.700244Z"
+     "iopub.execute_input": "2023-06-24T15:57:17.851281Z",
+     "iopub.status.busy": "2023-06-24T15:57:17.851024Z",
+     "iopub.status.idle": "2023-06-24T15:57:22.323678Z",
+     "shell.execute_reply": "2023-06-24T15:57:22.322901Z"
     }
    },
    "outputs": [
@@ -352,20 +362,13 @@
    "id": "bc57b1ff",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-17T04:39:17.705716Z",
-     "iopub.status.busy": "2023-06-17T04:39:17.705484Z",
-     "iopub.status.idle": "2023-06-17T04:39:19.099310Z",
-     "shell.execute_reply": "2023-06-17T04:39:19.098326Z"
+     "iopub.execute_input": "2023-06-24T15:57:22.328967Z",
+     "iopub.status.busy": "2023-06-24T15:57:22.328679Z",
+     "iopub.status.idle": "2023-06-24T15:57:23.981148Z",
+     "shell.execute_reply": "2023-06-24T15:57:23.980503Z"
     }
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "06-17-2023 00:39:17 WARNING[drop_object_executor:drop_object_executor.py:_handle_drop_udf:0082] UDF SentenceFeatureExtractor does not exist, therefore cannot be dropped.\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -377,7 +380,7 @@
     {
      "data": {
       "text/plain": [
-       "<evadb.models.storage.batch.Batch at 0x7ff47ff575b0>"
+       "<evadb.models.storage.batch.Batch at 0x7fcac5be7d90>"
       ]
      },
      "execution_count": 5,
@@ -417,10 +420,10 @@
    "id": "d8b1abe7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-17T04:39:19.103017Z",
-     "iopub.status.busy": "2023-06-17T04:39:19.102632Z",
-     "iopub.status.idle": "2023-06-17T04:39:28.129554Z",
-     "shell.execute_reply": "2023-06-17T04:39:28.128884Z"
+     "iopub.execute_input": "2023-06-24T15:57:23.986143Z",
+     "iopub.status.busy": "2023-06-24T15:57:23.985885Z",
+     "iopub.status.idle": "2023-06-24T15:57:32.979668Z",
+     "shell.execute_reply": "2023-06-24T15:57:32.978658Z"
     }
    },
    "outputs": [
@@ -482,10 +485,10 @@
    "id": "66b0bd42",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-17T04:39:28.133816Z",
-     "iopub.status.busy": "2023-06-17T04:39:28.133594Z",
-     "iopub.status.idle": "2023-06-17T04:39:30.929419Z",
-     "shell.execute_reply": "2023-06-17T04:39:30.928704Z"
+     "iopub.execute_input": "2023-06-24T15:57:32.985014Z",
+     "iopub.status.busy": "2023-06-24T15:57:32.984337Z",
+     "iopub.status.idle": "2023-06-24T15:57:35.915562Z",
+     "shell.execute_reply": "2023-06-24T15:57:35.914708Z"
     }
    },
    "outputs": [
@@ -493,7 +496,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "06-17-2023 00:39:29 WARNING[vector_index_scan_executor:vector_index_scan_executor.py:exec:0086] The index faiss_indexs returned only 2 results, which is fewer than the required 3.\n"
+      "06-24-2023 11:57:33 WARNING[vector_index_scan_executor:vector_index_scan_executor.py:exec:0086] The index faiss_indexs returned only 2 results, which is fewer than the required 3.\n"
      ]
     },
     {
